--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "webpack --mode=development",
     "start": "npm run build & webpack-dev-server --open --mode development",
     "lint": "eslint src/*.js",
-    "test": "jest --coverage",
-    "deploy": "gh-pages -d dist"
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -32,10 +31,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "get-google-fonts": "^1.2.2",
-    "gh-pages": "^3.1.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "unirest": "^0.6.0"
+    "popper.js": "^1.16.1"
   }
 }
